feat: :sparkles: Agrega el endpoint para el examen ordinario de Diseño Web
